@@ -1,1 +1,1 @@
-- safer memory allocation
+- add a man page for the configuration file
